testing/tests/ui/json-too-many-args.stderr
error: unexpected argument(s) in `json` filter
 --> OneTwoThree.txt:1:4
  |
       1 | {{ 1|json(2, 3) }}
         |    ^ close to this token
         |
 --> tests/ui/json-too-many-args.rs:5:10
  |
5 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
